--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -21,11 +21,21 @@ These are the general requirments for each major release of MoonPy. Currently we
 
 = Requirements for version 0.7.00 = 
 
+  * At least 4 players can play together
   * Units require energy: planned
+  * Map has energy pools on it: planned
   * Energy collectors provide energy to player: planned
   * Game processes rounds in addition to turns: planned
   * Game animation is working correctly: planned
 
 = Requirements for version 0.8.00 =
 
-  * All OMBC units and weapons coded and functioning correctly
+  * Map displays water
+  * Units/tethers are destroyed if they land in water
+  * Game generates random maps
+  * Towers can be launched
+  * Offense can be launched and function correctly
+  * Mines can be launched and function correctly
+  * Spikes can be launched and function correctly
+
+= Requirements for version 0.9.00 = 
