--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -21,6 +21,7 @@ These are the general requirments for each major release of MoonPy. Currently we
 
 = Requirements for version 0.7.00 = 
 
+  * Map works correctly as a torus: In progress
   * At least 4 players can play together: planned
   * Units require energy: planned
   * Map has energy pools on it: planned
