--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -22,7 +22,7 @@ These are the general requirements for each major release of MoonPy. Currently w
 = Requirements for version 0.7.00 = 
 
   * Map works correctly as a torus: Complete
-  * Units are launched in a true circle: In progress
+  * Units are launched in a true circle: Complete
   * At least 4 players can play together: planned
   * Units require energy: planned
   * Map has energy pools on it: planned
