--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Implementation
 #Version requirments for MoonPy
 
-These are the general requirements for each major release of MoonPy. Currently we are working towards the 0.7.00 release. This information may not be completely up to date, more detailed information can be found on the [http://code.google.com/p/tether/issues/list issue tracker].
+These are the general requirements for each major release of MoonPy. Currently we are working towards the 0.7.00 release. This information may not be completely up to date, more detailed information about bugs and feature implementation can be found on the [http://code.google.com/p/tether/issues/list issue tracker].
 
 = Requirements for version 0.5.00=
 
@@ -21,14 +21,14 @@ These are the general requirements for each major release of MoonPy. Currently w
 
 = Requirements for version 0.7.00 = 
 
-  * Map works correctly as a torus: Complete
-  * Units are launched in a true circle: Complete
+  * Map works correctly as a torus: complete
+  * Units are launched in a true circle: complete
   * At least 4 players can play together: planned
   * Units require energy: planned
   * Map has energy pools on it: planned
   * Energy collectors provide energy to player: planned
   * Game processes rounds in addition to turns: planned
-  * Game animation is working correctly: planned
+  * Game animation is working correctly: in progress
 
 = Requirements for version 0.8.00 =
 
