--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -29,7 +29,7 @@
   No.
 
   * Really? Why not?
-  Mostly because what we're trying to do is hard enough already and we don't want to go through the hassle of reverse engineering everything. We also want to make some changes that will make MoonPy incompatible with the original even if we did manage to reverse engineer the original.
+  Mostly because Moonbase Commander is essentially dead, almost no one plays it anymore and it's impossible to find a *legitimate* copy of the game. What we're trying to do is hard enough already and we don't want to go through the hassle of reverse engineering everything for no real benefit. We also want to make some changes that will make MoonPy incompatible with the original even if we did manage to reverse engineer the original.
 
   * What changes are you planning?
   The biggest change we want to make is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we find inconvenient. We would also like to add smarter AI, hotseat capabilities, and the ability to implement mods. 
