--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -24,10 +24,10 @@ These are the general requirements for each major release of MoonPy. Currently w
   * Map works correctly as a torus: complete
   * Units are launched in a true circle: complete
   * At least 4 players can play together: complete
-  * Units require energy: in progress
+  * Units require energy: complete
   * Map has energy pools on it: in progress
   * Energy collectors provide energy to player: planned
-  * Game processes rounds in addition to turns: in progress
+  * Game processes rounds in addition to turns: complete
   * Game animation is working correctly: complete
 
 = Requirements for version 0.8.00 =
