Edited wiki page through web user interface.

--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -42,8 +42,8 @@ These are the general requirements for each major release of MoonPy. Currently w
   * Repairs work correctly: planned
 
 = Requirements for version 0.9.00 = 
-  * All OMBC units/weapons implemented and working correctly
-  * Power bar needs to function correctly
+  * All OMBC units/weapons implemented and working correctly: planned
+  * Power bar needs to function correctly: complete
 
 = Requirements for version 1.0.00 = 
   * Fog of War
