--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -35,18 +35,16 @@ These are the general requirements for each major release of MoonPy. Currently w
   * Map displays water: complete
   * Units/tethers are destroyed if they land in water: planned
   * Game generates random maps: planned
-  * Towers can be launched: planned
-  * Offense can be launched and function correctly: planned
-  * Spikes can be launched and function correctly: planned
-  * Bridges work correctly: planned
-  * Repairs work correctly: planned
-
-= Requirements for version 0.9.00 = 
   * All OMBC units/weapons implemented and working correctly: planned
   * Power bar needs to function correctly: complete
 
-= Requirements for version 1.0.00 = 
+= Requirements for version 0.9.00 = 
   * Fog of War
   * Wind
   * Ability to create custom maps
   * Ability to load/save games
+
+= Requirements for version 1.0.00 = 
+
+  * All bugs found and fixed
+  * Ability to create custom mods
