Edited wiki page through web user interface.

--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -48,3 +48,4 @@ These are the general requirements for each major release of MoonPy. Currently w
 
   * All bugs found and fixed
   * Ability to create custom mods
+  * Hotseat capabilities
