--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -36,7 +36,7 @@ These are the general requirements for each major release of MoonPy. Currently w
   * Units/tethers are destroyed if they land in water: complete
   * Game generates random maps: complete
   * Power bar needs to function correctly: complete
-  * All OMBC units/weapons implemented and working correctly: planned
+  * All OMBC units/weapons implemented and working correctly: in progress
 
 = Requirements for version 0.9.00 = 
   * Fog of War
