--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -45,6 +45,10 @@ Amount of damage each weapon does with a direct hit
 
 All players start with 11 energy when they begin the game. Each player automatically gains 7 energy per round. All energy collectors give at least 1 energy per round regardless of placement. All energy collectors on an energy pool give 3 energy per round. All disabled energy collectors provide no energy assuming the round ends with them disabled.
 
+= disabled units = 
+
+Disabled units become active at the end of next turn of the player that disabled it. For example say player 1 disabled an anti-air owned by player 3 by launching a cluster over it. That particular anti-air will not reactivate until the end of player 1's *next* turn regardless of how many people are actually playing. This applies to EMP's as well. 
+
 = Power Bar =
 The power bar has 18 increments for power levels. It takes just under 3 seconds for it to make one complete pass (both up and down), sadly we are unable to be more accurate in our timing. Based off our best estimates though, this means it will take about 1.5 seconds for the bar to make one incomplete pass (one way). Divide this by 18 and you get 0.083+ seconds for each increment. OMBC most likely works by running the power bar at about .08 seconds per increment. This comes to 2.88 seconds for one complete pass which is would explain why it is just under 3 seconds instead of being 3 seconds exactly.
 
