--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -45,7 +45,7 @@ Amount of damage each weapon does with a direct hit
 
 All players start with 11 energy when they begin the game. Each player automatically gains 7 energy per round. All energy collectors give at least 1 energy per round regardless of placement. All energy collectors on an energy pool give 3 energy per round. All disabled energy collectors provide no energy assuming the round ends with them disabled.
 
-= disabled units = 
+= Disabled Units = 
 
 Disabled units become active at the end of next turn of the player that disabled it. For example say player 1 disabled an anti-air owned by player 3 by launching a cluster over it. That particular anti-air will not reactivate until the end of player 1's *next* turn regardless of how many people are actually playing. This applies to EMP's as well. 
 
