--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -37,7 +37,7 @@ These are the general requirements for each major release of MoonPy. Currently w
   * Game generates random maps: complete
   * Power bar needs to function correctly: complete
   * All OMBC units/weapons implemented and working correctly: in progress
-  * Game is stable enough to be played: planned
+  * All major bugs found and fixed: planned
 
 = Requirements for version 0.9.00 = 
   * Fog of War
@@ -47,6 +47,6 @@ These are the general requirements for each major release of MoonPy. Currently w
 
 = Requirements for version 1.0.00 = 
 
-  * All bugs found and fixed
+  * All minor bugs bugs found and fixed
   * Ability to create custom mods
   * Hotseat capabilities
