--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -49,6 +49,10 @@ All players start with 11 energy when they begin the game. Each player automatic
 
 Disabled units become active at the end of next turn of the player that disabled it. For example say player 1 disabled an anti-air owned by player 3 by launching a cluster over it. That particular anti-air will not reactivate until the end of player 1's *next* turn regardless of how many people are actually playing. This applies to EMP's as well. 
 
+= EMP Range = 
+
+The EMP has the largest radius of effect of any of the weapons. The damage radius is relatively small, about the size of a regular bomb. The EMP affect reaches for half of a hubs throwing distance. Note this is larger then the EMP 'explosion' graphic appears. I tested this by launching a tower at maximum range. I then launched EMP's at various ranges to determine where on the power bar the EMP would still disable the tower and when it would not. Launching the EMP at exactly half power would cause the tower to be disabled but 1 section less and it would not. Of interesting note is that at both halfway and one under the launching hub was not disabled. This means that launching at half power is not exactly half way along the tether. This makes sense since there is a minimum launch radius. 
+
 = Power Bar =
 The power bar has 18 increments for power levels. It takes just under 3 seconds for it to make one complete pass (both up and down), sadly we are unable to be more accurate in our timing. Based off our best estimates though, this means it will take about 1.5 seconds for the bar to make one incomplete pass (one way). Divide this by 18 and you get 0.083+ seconds for each increment. OMBC most likely works by running the power bar at about .08 seconds per increment. This comes to 2.88 seconds for one complete pass which is would explain why it is just under 3 seconds instead of being 3 seconds exactly.
 
