--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -13,8 +13,8 @@ OMBC map editor uses a grid system for placing objects such as buildings, water,
 = Tether spacing stats =
 Tethers can not overlap each other. In OMBC if a player attempts to launch a tethered projectile to close to another tether a warning circle appears and the game will not allow the hub to fire. Using a blank map and firing tethers in a circle we have attempted to measure the minimum angle between tethers. As can be seen in the 2 images below:
 
-http://tether.googlecode.com/svn/wiki/images/rotation_example1.PNG
-http://tether.googlecode.com/svn/wiki/images/rotation_example2.PNG
+http://tether.googlecode.com/svn/wiki/images/rotation_example1.png
+http://tether.googlecode.com/svn/wiki/images/rotation_example2.png
 
 Only 11 tethers can be placed but it isn't even. While I may have made a mistake in placing I did perform this test a couple of times and recieved this result each time. I believe that when moving the pointer OMBC checks to see if you are within 30 degrees of another tether and prevents you from firing if you are (thereby giving each individual tether a 15 degree leeway on each side). I suspect the last tether is impossible to place because while there is technically a 12th 30 degree slice capable of fitting another tether the 'warning system' see's a 1 degree overlap that really doesn't exist. On a side note I think this is something else we can fix to make the system more even. 
 
@@ -52,6 +52,14 @@ Disabled units become active at the end of next turn of the player that disabled
 = EMP Range = 
 
 The EMP has the largest radius of effect of any of the weapons. The damage radius is relatively small, about the size of a regular bomb. The EMP affect reaches for half of a hubs throwing distance. Note this is larger then the EMP 'explosion' graphic appears. I tested this by launching a tower at maximum range. I then launched EMP's at various ranges to determine where on the power bar the EMP would still disable the tower and when it would not. Launching the EMP at exactly half power would cause the tower to be disabled but 1 section less and it would not. Of interesting note is that at both halfway and one under the launching hub was not disabled. This means that launching at half power is not exactly half way along the tether. This makes sense since there is a minimum launch radius. 
+
+
+= Mine & anti-air range =
+
+The image below has both the AA and the mines fired at absolute minimum power to help estimate the radius of their 'trigger zones'
+
+http://tether.googlecode.com/svn/wiki/images/radius_example1.png
+As can be seen, the mines are just under the minimum range while anti-airs seem to reach about 25% farther then minimum.
 
 = Power Bar =
 The power bar has 18 increments for power levels. It takes just under 3 seconds for it to make one complete pass (both up and down), sadly we are unable to be more accurate in our timing. Based off our best estimates though, this means it will take about 1.5 seconds for the bar to make one incomplete pass (one way). Divide this by 18 and you get 0.083+ seconds for each increment. OMBC most likely works by running the power bar at about .08 seconds per increment. This comes to 2.88 seconds for one complete pass which is would explain why it is just under 3 seconds instead of being 3 seconds exactly.
