--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -36,11 +36,12 @@ These are the general requirements for each major release of MoonPy. Currently w
   * Units/tethers are destroyed if they land in water: complete
   * Game generates random maps: complete
   * Power bar needs to function correctly: complete
-  * All OMBC units/weapons implemented and working correctly: in progress
-  * All major bugs found and fixed: planned
+  * All OMBC units/weapons implemented and working correctly: complete
+  * All major bugs found and fixed: in progess
 
 = Requirements for version 0.9.00 = 
   * Fog of War
+  * Balloons
   * Wind
   * Ability to create custom maps
   * Ability to load/save games
