Edited wiki page through web user interface.

--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -40,6 +40,8 @@ These are the general requirements for each major release of MoonPy. Currently w
   * All major bugs found and fixed: in progess
 
 = Requirements for version 0.9.00 = 
+  * Ability to play against bots
+  * Team play available
   * Fog of War
   * Balloons
   * Wind
