--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -11,16 +11,19 @@
   We used to have a copy of the free trial available for download here. Sadly because of space limitations we have had to remove it to make room for other stuff. You could do a web search to find a copy online, or you could simply download and play MoonPy.
 
   * Moonbase Commander absolutely rocks! Why recreate something thats so perfect?
-  While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not recieved any support from the parent company for over 7 years we assume that they will never be resolved. Rather then live with it we started this project to resolve these flaws ourselves.
+  While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not received any support from the parent company for over 7 years we assume that they will never be resolved. Rather then live with it we started this project to resolve these flaws ourselves.
 
  * What is MoonPy?
  MoonPy is the name of our most promising game we have developed for project tether so far. It is written in python (hence the name) and is currently the only program we plan on releasing.
 
  * How far along is MoonPy?
- MoonPy is currently at a stage where 4 player free for all games are possible. Hubs and bombs are the only units/weapons available, but beyond that it is playable. Be aware that it's a work in progress and to expect some bugs even with the "stable" versions.
+ MoonPy is currently at a stage where 4 player free for all games are possible. All the units except for balloons are implemented, and since there is no FoW balloon aren't really important anyway. Be aware that it has gone through some major changes recently and the current versions haven't been fully tested so expect bugs.
 
  * Hey, where did the MoonPy downloads go?
- Although we had archives available previously, MoonPy is currently going through some major development right now and progress is moving so fast it isn't worth the time for us to package it. Once we have implemented all of the features we want and have worked out the worst of the bugs we'll start offering download packages. Until then you can either download the deprecated archives or download via [http://code.google.com/p/tether/source/checkout SVN]. 
+ Although we had archives available previously, MoonPy has gone through some major enhancements recently and we're in the middle of finding all the new bugs. It's not worth the time to package it for the downloads page until the worst of the bugs are found and fixed. Until then you can either download the deprecated archives or download via [http://code.google.com/p/tether/source/checkout SVN].
+
+  * I don't know how to get the deprecated versions or use SVN
+  In that case you're better off not playing MoonPy until more of the bugs are worked out. It really isn't stable enough for the 'average' user right now.
 
   * Why are you using python, why not a real programming language like C++?
   There are many reasons we're using python but the top 3 reasons are: it's simple to code, it's easily portable to different OS's, and it does what we need.
@@ -38,7 +41,7 @@
   The biggest change we want to make is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we find inconvenient. We would also like to add smarter AI, hotseat capabilities, and the ability to implement mods. 
 
   * How can I help out with the project?
-  Cool! We can always use some help to keep this going. In addition to help with the code we also could use graphics, sounds, music, documentation, etc. You can always check out the [http://code.google.com/p/tether/issues/list issue tracker], or post onto our [http://groups.google.com/group/project-tether mailing list]. Also just spreading the word about project tether is a big benefit to us as well.
+  Cool! We can always use some help to keep this going. Currently the biggest help we need is people to help us identify bugs, so just downloading it, playing it, and reporting back to us would be *very* useful. In addition to help with the code we also could use graphics, sounds, music, documentation, etc. You can always check out the [http://code.google.com/p/tether/issues/list issue tracker], or post onto our [http://groups.google.com/group/project-tether mailing list]. Also just spreading the word about project tether is a big benefit to us as well.
 
   * I've been looking through the source code archives and keep seeing mention of openRTS, is project tether a part of openRTS?
   openRTS is a completely seperate project from project tether. We have however integrated code from various other open source projects to help speed up development of project tether. The MoonPy engine is a heavily modified version of the openRTS engine and as such elements of openRTS occasionally show up, especially in older versions of MoonPy. Currently very little of the original openRTS engine remains unchanged within MoonPy, we do however have the original unedited openRTS source files on our [http://code.google.com/p/tether/downloads/list downloads page] for reference and historical purposes.
