--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -40,6 +40,7 @@ Amount of damage each weapon does with a direct hit
   * Energy = 6
   * EMP = 2
   * Spike = 3
+  * Mines = 3
 
 = Energy Collection =
 
