--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -1,14 +1,17 @@
 #labels Phase-Support,Deprecated
 #Instructions on how to play MoonPy
 
-= Incomplete =
+= Installation=
 
 This document is woefully incomplete and should not be referenced at this time. 
 
 
-= Details =
+= Gameplay =
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
+
+
+= Units = 
