--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -3,7 +3,11 @@
 
 = Installation=
 
-This document is woefully incomplete and should not be referenced at this time. 
+Download and install python
+Download and install pygame
+Download and install PIL
+Download MoonPy and extract the folder
+Run moon.py
 
 
 = Gameplay =
