--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -1,7 +1,12 @@
 #labels Phase-Support,Deprecated
 #Instructions on how to play MoonPy
 
-= Installation=
+= Object of Game =
+
+Destroy your enemies!
+
+
+= Installation = 
 
 Download and install python
 Download and install pygame
@@ -12,10 +17,24 @@ Run moon.py
 
 = Gameplay =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== How to 'move' ==
+
+All units units are launched similar to many artillery games like scorched3D. On your turn select the unit you wish to fire from. Choose the direction you wish to fire, then choose the weapon you wish to fire. When ready hold down the fire button. The power indicator will start moving up and down. Releasing the fire button will launch the unit in the direction selected with the power the power indicator ended on.
+
+== Energy, rounds, and turns ==
+
+MoonPy progresses in rounds *and* turns. Each player can launch one unit on their turn. Whenever a unit is launched, energy based on the energy level is used up. All players continue taking turns until they either run out of energy or choose to skip their turns. Once every player has either run out of energy or skipped their turn the round ends. When the round ends all players regain energy. 
 
 
 = Units = 
+
+== Level 1 ==
+
+
+== Level 3 ==
+
+
+== Level 4 == 
+
+
+= Differences between MoonPy and OMBC = 
